backends/Gateway/configs/lds.yaml
resources:
  - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
    name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: AUTO
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                  - name: www
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/health"
                        direct_response:
                          status: 200
                          body:
                            inline_string: '{"message":"helthy"}'
                        response_headers_to_add:
                          - append: false
                            header:
                              key: content-type
                              value: application/json
                      - match:
                          prefix: "/co"
                        route:
                          prefix_rewrite: "/cognitive-service"
                          cluster: cognitiveservice
                      - match:
                          prefix: "/id"
                        route:
                          prefix_rewrite: "/identity-service"
                          cluster: identityservice

                    cors:
                      allow_origin:
                        - "https://localhost"
                      allow_methods: GET, PUT, DELETE, POST, OPTIONS
                      allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                      max_age: "1728000"
                      expose_headers: custom-header-1,grpc-status,grpc-message
                      filter_enabled:
                        default_value:
                          numerator: 100
                          denominator: HUNDRED
                        runtime_key: cors.www.enabled

              http_filters:
                - name: envoy.filters.http.cors
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            common_tls_context:
              tls_certificates:
                certificate_chain:
                  filename: "/etc/server.crt"
                private_key:
                  filename: "/etc/server.key"
              alpn_protocols: ["h2,http/1.1"]
              tls_params:
                tls_minimum_protocol_version: "TLSv1_2"
